--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
+    "mercadopago": "^2.10.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2"
   },
