--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "firebase-admin": "^13.5.0",
     "mercadopago": "^2.10.0",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
